--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
               </svg>
             </button>
           </div>
-          <a href="auth.html" class="btn-register">Minha Conta</a>
+          <a href="auth.html" class="btn-register">Fazer Login</a>
         </div>
       </div>
       <hr class="italy" />
@@ -310,7 +310,7 @@
             </div>
 
             <div class="actions">
-              <button type="submit">Mandar</button>
+              <button type="submit">Enviar</button>
             </div>
           </form>
 
