--- a/public/auth.html
+++ b/public/auth.html
@@ -111,6 +111,8 @@
 
           <hr />
 
+          <button class="facebook" type="button">Login com Facebook</button>
+
           <div class="field">
             <input type="email" name="email" id="email-login" />
             <label for="email-login">E-mail</label>
@@ -180,7 +182,18 @@
 
           <hr />
 
-          <div class="loading-wrap">
+          <div class="field">
+            <input type="email" name="email" id="email-forget" />
+            <label for="email-forget">E-mail</label>
+          </div>
+
+          <div class="alert danger"></div>
+
+          <div class="actions">
+            <button type="submit">Cadastrar</button>
+          </div>
+
+          <!--<div class="loading-wrap">
             <div class="loading">
               <div></div>
               <div></div>
@@ -188,9 +201,9 @@
               <div></div>
             </div>
             <p>Por favor, aguarde...</p>
-          </div>
+          </div> -->
 
-          <div class="message">
+          <div class="message" style="display: none">
             <img src="assets/images/check-circle.svg" alt="Ok" />
             <span>Verifique as instruções no seu e-mail.</span>
           </div>
