--- a/public/auth.html
+++ b/public/auth.html
@@ -99,6 +99,7 @@
             <input type="email" name="email" id="email" />
             <label for="email">E-mail</label>
           </div>
+          <div class="alert danger"></div>
 
           <div class="actions">
             <a href="auth.html#register" class="link">Criar uma Conta</a>
