--- a/public/auth.html
+++ b/public/auth.html
@@ -99,7 +99,6 @@
             <input type="email" name="email" id="email" />
             <label for="email">E-mail</label>
           </div>
-          <div class="alert danger"></div>
 
           <div class="actions">
             <a href="auth.html#register" class="link">Criar uma Conta</a>
@@ -191,18 +190,18 @@
           <div class="alert danger"></div>
 
           <div class="actions">
-            <button type="submit">Cadastrar</button>
+            <button type="submit">Enviar</button>
           </div>
 
           <!--<div class="loading-wrap">
-            <div class="loading">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-            <p>Por favor, aguarde...</p>
-          </div> -->
+                    <div class="loading">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <p>Por favor, aguarde...</p>
+                </div>-->
 
           <div class="message" style="display: none">
             <img src="assets/images/check-circle.svg" alt="Ok" />
@@ -219,6 +218,8 @@
             <input type="password" name="password" id="password-reset" />
             <label for="password-reset">Crie uma Nova Senha</label>
           </div>
+
+          <div class="alert danger"></div>
 
           <div class="actions">
             <button type="submit">Redefinir</button>
