--- a/public/schedules-services.html
+++ b/public/schedules-services.html
@@ -187,9 +187,10 @@
       </header>
 
       <main>
-        <form action="schedules-payment.html">
-          <input type="hiden" name="schedule_at" />
-          <input type="hiden" name="option" />
+        <form>
+          <input type="hidden" name="schedule_at" />
+          <input type="hidden" name="option" />
+
           <div class="options"></div>
 
           <footer class="fixed">
@@ -204,12 +205,7 @@
 
         <section>
           <table>
-            <tbody>
-              <tr>
-                <td>Alinhamento</td>
-                <td class="price">R$ 0,00</td>
-              </tr>
-            </tbody>
+            <tbody></tbody>
           </table>
         </section>
 
