--- a/public/schedules-address.html
+++ b/public/schedules-address.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Conheça a Ferrari Auto Center" />
     <title>Ferrari - Hcode Lab</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="assets/images/ferrari-logo.svg"
+    />
+    <link rel="alternate icon" href="assets/images/ferrari-logo.ico" />
+    <meta name="theme-color" content="#eceae7" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -73,16 +82,12 @@
       sizes="16x16"
       href="assets/images/favicon-16x16.png"
     />
-    <link rel="manifest" href="manifest.json" />
-    <meta name="msapplication-TileColor" content="#E1DEDD" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
       content="assets/images/ms-icon-144x144.png"
     />
-    <meta name="theme-color" content="#E1DEDD" />
-    <meta name="description" content="Conheça a Ferrari Auto Center" />
-    <link rel="stylesheet" href="assets/css/main.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/cropper.min.css" type="text/css" />
+    <link href="manifest.json" rel="manifest" />
   </head>
   <body>
     <header id="header">
@@ -181,43 +186,64 @@
       </div>
       <hr class="italy" />
     </header>
-
-    <section class="page" id="change-photo">
+    <section id="schedules-address" class="page blue">
       <header>
-        <h1>Mudar Foto</h1>
+        <h1>Endereço de Cobrança</h1>
       </header>
 
       <main>
-        <form>
-          <img
-            src="assets/images/user@4x.png"
-            alt="Foto Atual"
-            id="photo-preview"
-          />
+        <form action="schedules-summary.html">
+          <a href="schedules-address-create.html" class="btn-create"
+            >Novo Endereço</a
+          >
 
-          <input type="file" name="photo" id="file" />
+          <hr />
 
-          <input type="hidden" name="x" />
-          <input type="hidden" name="y" />
-          <input type="hidden" name="width" />
-          <input type="hidden" name="height" />
+          <div class="addresses">
+            <label>
+              <div>
+                <input type="radio" name="address" value="1" />
+                <div class="circle">
+                  <div></div>
+                </div>
+                <address>
+                  <strong>Av. Paulista, 500</strong><br />
+                  Bela Vista<br />
+                  São Paulo - SP<br />
+                  01310-100
+                </address>
+              </div>
+              <a href="schedules-address-update.html" class="btn-update"
+                >Editar</a
+              >
+            </label>
 
-          <button type="button" class="choose-photo">Escolher Foto</button>
-
-          <div class="toast success open">
-            Foto alterada com sucesso!
-            <button type="button" class="close">
-              <span>&times;</span>
-            </button>
+            <label>
+              <div>
+                <input type="radio" name="address" value="1" />
+                <div class="circle">
+                  <div></div>
+                </div>
+                <address>
+                  <strong>Av. Paulista, 500</strong><br />
+                  Bela Vista<br />
+                  São Paulo - SP<br />
+                  01310-100
+                </address>
+              </div>
+              <a href="schedules-address-update.html" class="btn-update"
+                >Editar</a
+              >
+            </label>
           </div>
 
           <footer class="fixed">
-            <button type="submit">Salvar</button>
+            <a href="schedules-payment.html">Voltar</a>
+            <button type="submit">Continuar</button>
           </footer>
         </form>
       </main>
     </section>
-
     <script src="bundle.js"></script>
   </body>
 </html>
